--- a/style.css
+++ b/style.css
@@ -43,12 +43,23 @@ header img {
   font-weight: 300;
   transition: all 0.3s ease-in-out;
   position: relative;
+
+  opacity: 0;
+  transform: translateY(30px);
+  animation: card_display 0.8s ease-in-out forwards;
+}
+@keyframes card_display {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .card.blue {
   background: #2196f3;
   margin-top: 240px;
   margin-left: 0;
   z-index: 1;
+  animation-delay: 0.2s;
 }
 .boy1 {
   height: 200px;
@@ -107,6 +118,7 @@ header img {
   margin-left: -40px;
   margin-top: 160px;
   z-index: 2;
+  animation-delay: 0.4s;
 }
 .card.blue:hover,
 .card.green:hover {
@@ -128,6 +140,7 @@ header img {
   margin-left: -40px;
   color: #fff;
   z-index: 3;
+  animation-delay: 0.6s;
 }
 .card h2 {
   margin-top: 0;
@@ -152,9 +165,6 @@ header img {
   margin-top: 48px;
   overflow: hidden;
   position: relative;
-}
-.s01btn span {
-  dis
 }
 .s01btn:hover > span {
   display: inline-block;
