--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Manrope", sans-serif;
-  background: #061238; /* màu nền tối */
+  background: #061238;
   color: #fff;
 }
 header {
@@ -21,7 +21,6 @@ header {
 header img {
   height: 32px;
 }
-
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -30,7 +29,6 @@ header img {
   height: 100vh;
   align-items: center;
 }
-
 .card {
   border-radius: 64px;
   padding: 48px;
@@ -43,23 +41,12 @@ header img {
   font-weight: 300;
   transition: all 0.3s ease-in-out;
   position: relative;
-
-  opacity: 0;
-  transform: translateY(30px);
-  animation: card_display 0.8s ease-in-out forwards;
-}
-@keyframes card_display {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
 .card.blue {
   background: #2196f3;
   margin-top: 240px;
   margin-left: 0;
   z-index: 1;
-  animation-delay: 0.2s;
 }
 .boy1 {
   height: 200px;
@@ -118,7 +105,6 @@ header img {
   margin-left: -40px;
   margin-top: 160px;
   z-index: 2;
-  animation-delay: 0.4s;
 }
 .card.blue:hover,
 .card.green:hover {
@@ -140,7 +126,6 @@ header img {
   margin-left: -40px;
   color: #fff;
   z-index: 3;
-  animation-delay: 0.6s;
 }
 .card h2 {
   margin-top: 0;
@@ -150,7 +135,6 @@ header img {
   letter-spacing: -2px;
   line-height: 120%;
 }
-
 .s01btn {
   display: inline-block;
   background: #fff;
@@ -218,7 +202,7 @@ header img {
 }
 .bg_pattern {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   width: 100%;
   height: 100vh;
   overflow: hidden;
