--- a/style.css
+++ b/style.css
@@ -242,3 +242,12 @@ header img {
   bottom: -24px;
   left: calc(50% - 213px);
 }
+
+#starfield {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
